--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <h2>Guess the button</h2>
         <h6 id="message">
             </h5>
-            <button class="btn btn-success" id="restartgame" onclick="reset()">Restart game</button>
+            <button class="btn btn-success" id="restartgame" onclick="print_message(reset());">Restart game</button>
             <div class="input-group flex-nowrap" style="margin-top: 40px; margin-bottom: 40px; width: 40%;">
                 <input type="text" class="form-control" width=10px placeholder="Please enter a number to generate buttons!" id="buttons_number_input">
-                <button class="btn btn-info" id="generate_buttons" type="button" onclick="generate_buttons()">Generate Buttons</button>
+                <button class="btn btn-info" id="generate_buttons" type="button" onclick="print_message(generate_buttons());">Generate Buttons</button>
             </div>
             <div id="generated_buttons"></div>
     </div>
